# service-tracks

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  fly.toml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_church_playlist_settings.py  003_streaming_settings.py
backend/app/: config.py  database.py  dependencies.py  main.py  rate_limit.py  scheduler.py
backend/app/adapters/: pco_client.py  spotify_adapter.py  streaming.py  youtube_adapter.py
backend/app/middleware/: auth.py  security_headers.py
backend/app/models/: __init__.py  church.py  church_user.py  pco_connection.py  playlist.py  search_cache.py  song_mapping.py  streaming_connection.py  streaming_settings.py  sync_log.py  user_session.py  youtube_quota.py
backend/app/routers/: auth.py  dashboard.py  health.py  pco.py  plans.py  settings.py  songs.py  streaming.py  webhooks.py  well_known.py
backend/app/schemas/: auth.py  dashboard.py  pco.py  plans.py  settings.py  songs.py  streaming.py  sync.py
backend/tests/: conftest.py  test_auth.py  test_cleanup_jobs.py  test_dashboard.py  test_encryption.py  test_health.py  test_models.py  test_pco.py  test_pco_client.py  test_plans.py  test_plans_list.py  test_playlist_templates.py  test_scheduler.py  test_security_headers.py  test_settings.py  test_songs.py  test_spotify_adapter.py  test_streaming.py  test_streaming_settings.py  test_sync_service.py  test_token_reauth.py  test_webhooks.py  test_youtube_adapter.py
(+89 files in other folders)
